# cookiecutter_molde

./: 404.html  README.md  cookiecutter.json  index.html  pyproject.toml  sitemap.xml
search/: search_index.json
{{cookiecutter.directory_name}}/: .env  README.md  main.py  pyproject.toml  settings.toml
{{cookiecutter.project_slug}}/: .gitignore  main.py  mkdocs.yml  pyproject.toml  settings.toml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/setups/: s01.py
{{cookiecutter.project_slug}}/site/: index.html
{{cookiecutter.project_slug}}/src/: function_01.py
