[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}} <user@mail.com>"]
maintainers = ["{{cookiecutter.mantainer_name}} <user@mail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
